--- a/product_details_7.html
+++ b/product_details_7.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="Shop.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Grocery Store by Aftab</title>
+    <title>Grocery Store</title>
 
     <link rel="shortcut icon" href="png/001-shopping-bag.png" type="image/x-icon">
 
 </head>
+
 <body>
     <div class="small-container single-product">
         <div class="row">
-          <div class="col-2">
-            <img src="image/product-7.png" width="100%" id="ProductImg" />
-  
-            <!--<div class="small-img-row">
+            <div class="col-2">
+                <img src="image/product-7.png" width="100%" id="ProductImg" alt="product" />
+
+                <!--<div class="small-img-row">
               <div class="small-img-col">
                 <img src="gallery-1.jpg" width="100%" id="small-img-1" />
               </div>
@@ -30,102 +32,99 @@
                 <img src="gallery-4.jpg" width="100%" id="small-img-4" />
               </div>
             </div>-->
-          </div>
-          <div class="col-2">
-            <p></p>
-            <h1>Fresh Carrot</h1>
-            <h4>$50.00</h4>
-            <select>
-              <option>Qty</option>
-              <option>3kg</option>
-              <option>2kg</option>
-              <option>1kg</option>
-              <option>500g</option>
-              <option>250g</option>
-            </select>
-            <input type="number" value="1" />
-            <a href="" class="btn">Add To Cart</a>
-  
-            <h3>
-              Product Details<i class="fa fa-indent" aria-hidden="true"></i>
-            </h3>
-            <br />
-            <p>
-              Give your summer wardrob a style upgrade with the HRX men's Active
-              T-Shirt. Team it with a pair of shorts for your morning workout or a
-              denims for an evening workout or a denims for en evening out with
-              the guys.
-            </p>
-          </div>
+            </div>
+            <div class="col-2">
+                <p></p>
+                <h1>Fresh Carrot</h1>
+                <h4>$50.00</h4>
+                <select>
+          <option>Qty</option>
+          <option>3kg</option>
+          <option>2kg</option>
+          <option>1kg</option>
+          <option>500g</option>
+          <option>250g</option>
+        </select>
+                <input type="number" value="1" />
+                <a href="" class="btn">Add To Cart</a>
+
+                <h3>
+                    Product Details<i class="fa fa-indent" aria-hidden="true"></i>
+                </h3>
+                <br />
+                <p>
+                    Give your summer wardrob a style upgrade with the HRX men's Active T-Shirt. Team it with a pair of shorts for your morning workout or a denims for an evening workout or a denims for en evening out with the guys.
+                </p>
+            </div>
         </div>
-      </div>
-  
-      <div class="small-container">
+    </div>
+
+    <div class="small-container">
         <div class="row row-2">
-          <h2>Related Product</h2>
-          <p>View More</p>
+            <h2>Related Product</h2>
+            <p>View More</p>
         </div>
-      </div>
-  
-      <div class="small-container">
+    </div>
+
+    <div class="small-container">
         <div class="row">
-          <div class="col-4">
-            <img src="image/product-1.png" alt="" />
-            <h3>Fresh Orange</h3>
-            <div class="rating">
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
+            <div class="col-4">
+                <img src="image/product-1.png" alt="" />
+                <h3>Fresh Orange</h3>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <p>$4.99/- - 10.99/-</p>
             </div>
-            <p>$4.99/- - 10.99/-</p>
-          </div>
-  
-          <div class="col-4">
-            <img src="image/product-2.png" alt="" />
-            <h3>Fresh Onion</h3>
-            <div class="rating">
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
+
+            <div class="col-4">
+                <img src="image/product-2.png" alt="" />
+                <h3>Fresh Onion</h3>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <p>$50.00</p>
             </div>
-            <p>$50.00</p>
-          </div>
-  
-          <div class="col-4">
-            <img src="image/product-3.png" alt="" />
-            <h3>Fresh Meat</h3>
-            <div class="rating">
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star-o" aria-hidden="true"></i>
+
+            <div class="col-4">
+                <img src="image/product-3.png" alt="" />
+                <h3>Fresh Meat</h3>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+                <p>$50.00</p>
             </div>
-            <p>$50.00</p>
-          </div>
-  
-          <div class="col-4">
-            <img src="image/product-8.png" alt="" />
-            <h3>Freah Avocado</h3>
-            <div class="rating">
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star-half-o" aria-hidden="true"></i>
+
+            <div class="col-4">
+                <img src="image/product-8.png" alt="" />
+                <h3>Freah Avocado</h3>
+                <div class="rating">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                </div>
+                <p>$50.00</p>
             </div>
-            <p>$50.00</p>
-          </div>
         </div>
-      </div>
-  
-      <!----------------Footer----------------->
-  
-      <section class="footer" id="footer">
+    </div>
+
+    <!----------------Footer----------------->
+
+    <section class="footer" id="footer">
 
         <div class="box-container">
 
@@ -142,10 +141,10 @@
 
             <div class="box">
                 <h3>contact info</h3>
-                <a href="#" class="links"> <i class="fas fa-phone"></i> +84-869040236 </a>
+                <a href="#" class="links"> <i class="fas fa-phone"></i> +91-1234567890 </a>
                 <a href="#" class="links"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-                <a href="#" class="links"> <i class="fas fa-envelope"></i> aftabshaikh0043@gmail.com </a>
-                <a href="#" class="links"> <i class="fas fa-map-marked-alt"></i> Bandra (East), BKC, Mumbai. </a>
+                <a href="#" class="links"> <i class="fas fa-envelope"></i> shaikhqamar7379@gmail.com </a>
+                <a href="#" class="links"> <i class="fas fa-map-marked-alt"></i>Mumbai. </a>
             </div>
 
             <div class="box">
@@ -160,7 +159,7 @@
 
             <div class="box">
                 <h3>newsletter</h3>
-                <p>subscribe for latest updates</p>    
+                <p>subscribe for latest updates</p>
                 <input type="email" placeholder="your email" class="email">
                 <input type="submit" value="subscribe" class="btn">
                 <img src="image/payment.png" alt="" class="payment-img">
@@ -169,6 +168,6 @@
         </div>
 
 
-        <div class="credit"> Created By <span> Aftab Ali </span> | All Rights Reseved </div>
+        <div class="credit"> Created By <span> Abu Qamar </span> | All Rights Reseved </div>
 
     </section>
